--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mocha": "~1.9.0",
     "chai": "~1.5.0",
     "coffee-script": "~1.6.3",
-    "jquery": "~1.8.3"
+    "jquery": "~1.8.3",
+    "jsdom": "~0.8.3"
   },
   "repository": "",
   "dependencies": {
